# pythiaLabs

./: .formatter.exs  .gitignore  AI_SAFETY_PORTFOLIO.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REVIEWER_START_HERE.md  SECURITY.md  mix.exs
.github/: FUNDING.yml  dependabot.yml
benches/: bench.exs  strategy_bench.exs
docs/: AGENT_ACTION_AUDIT_KIT.md  AGENT_ACTION_AUDIT_OUTREACH.md  AGENT_ACTION_AUDIT_REPORT_TEMPLATE.md  AGENT_ACTION_AUDIT_SAMPLE_REPORT.md  AGENT_ACTION_AUDIT_SNAPSHOT.md  AGENT_ACTION_AUDIT_SNAPSHOT_OUTREACH.md  AGENT_ACTION_AUDIT_SNAPSHOT_PLUS.md  BUDGET_AND_MILESTONES_COMMONS.md  GITHUB_PROFILE_README_DRAFT.md  GRANT_EVIDENCE.md  GRANT_MILESTONE_TRACKER_COMMONS.md  GRANT_PORTFOLIO_STATUS.md  LIMINAL_AUDIT_BRIDGE.md  LIMINAL_EVIDENCE_STACK.md  LIMITATIONS.md  NGI_COMMONS_REVIEWER_PATH.md  NON_CLAIMS.md  OTF_REVIEWER_PATH.md  PILOT_USE_CASES.md  PORTFOLIO_ONE_PAGE_GRANT_PACKET.md  PORTFOLIO_RELATIONSHIP.md  PROOFPATH_CONTINUATION_FOR_REVIEWERS.md  PYTHIALABS_ONE_PAGE_SUMMARY.md  README.md  README_REVIEWER_LINK_PATCH.md  RELATED_LS_GRANT_PATH.md  RELEASE_NOTES_REVIEWER_READY.md  RESEARCH_QUESTIONS.md  REVIEWER_FIRST_SCREEN.md  REVIEWER_PATH.md  SILICON_GATE_EXTERNAL_CONSUMER.md  SPONSORSHIP.md  THREAT_MODEL.md  api_v1.md  (+39 more)
integrations/liminal_audit_bridge/: README.md  pyproject.toml
integrations/liminal_audit_bridge/examples/: petri_like_transcript.json
integrations/liminal_audit_bridge/src/liminal_audit_bridge/: __init__.py  bridge.py
integrations/liminal_audit_bridge/tests/: test_bridge.py
(+134 files in other folders)
